完成新闻模块的读取 和 显示

--- a/ProjectIntroduce.html
+++ b/ProjectIntroduce.html
@@ -29,6 +29,8 @@
 					<tr><td>&nbsp;</td></tr>
 					<tr><td>4.3 数据库实现</td></tr>
 					<tr><td>数据库操作使用mybatis. 具体用Dao层实现, 用Service层隔离数据库操作.</td></tr>
+					<tr><td>&nbsp;</td></tr>
+					<tr><td><a href="ProjectIntroduce/designModel.html">查看详细介绍</a>-<a href="/EnterprisePortal/index.mvc">返回门户网站</a></td></tr>
 				</table>
 			</td>
 		</tr>
